force-app/main/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Client_Friendly_Name__c</fullName>
        <label>Client Friendly Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Deployment_URL__c</fullName>
        <label>Deployment URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Deployment__c</fullName>
        <formula>HYPERLINK(Deployment_URL__c, &quot;Link&quot;, &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deployment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MS_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MS Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MS_Type__c</fullName>
        <description>Value in this field defines the Product used by which MS Team, also this field being used to map LOB on auto created jobs based on the product selected at Opportunity level.</description>
        <label>MS Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TA - Corporate</fullName>
                </value>
                <value>
                    <fullName>TA - Vocational</fullName>
                </value>
                <value>
                    <fullName>Talent Management</fullName>
                </value>
                <value>
                    <fullName>TA - Credentialing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order_Form_Category__c</fullName>
        <description>Category field will be used to  generate Order Form with right Product &amp; Service content. Will be used by MicroStrategy Tool.</description>
        <label>Order Form Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Subscription</fullName>
                </value>
                <value>
                    <fullName>In advance Order</fullName>
                </value>
                <value>
                    <fullName>In arrears Order</fullName>
                </value>
                <value>
                    <fullName>Managed Services</fullName>
                </value>
                <value>
                    <fullName>Consulting (PS Work)</fullName>
                </value>
                <value>
                    <fullName>Setup / build</fullName>
                </value>
                <value>
                    <fullName>ADC</fullName>
                </value>
                <value>
                    <fullName>Advisory Services</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Product License</fullName>
                </value>
                <value>
                    <fullName>In company training</fullName>
                    <isActive>false</isActive>
                    <label>In company training</label>
                </value>
                <value>
                    <fullName>Public training</fullName>
                    <isActive>false</isActive>
                    <label>Public training</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <label>Product Family</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ADC</fullName>
                </value>
                <value>
                    <fullName>Managed Services</fullName>
                </value>
                <value>
                    <fullName>Wardhead</fullName>
                </value>
                <value>
                    <fullName>360</fullName>
                </value>
                <value>
                    <fullName>Ability</fullName>
                </value>
                <value>
                    <fullName>Ancillary</fullName>
                </value>
                <value>
                    <fullName>Coding Simulation</fullName>
                </value>
                <value>
                    <fullName>Cognitive Ability</fullName>
                </value>
                <value>
                    <fullName>Competencies</fullName>
                </value>
                <value>
                    <fullName>Custom Report</fullName>
                </value>
                <value>
                    <fullName>Digital Training</fullName>
                </value>
                <value>
                    <fullName>Experiences</fullName>
                </value>
                <value>
                    <fullName>GCSC</fullName>
                </value>
                <value>
                    <fullName>Insights capability</fullName>
                </value>
                <value>
                    <fullName>Integration</fullName>
                </value>
                <value>
                    <fullName>Interview</fullName>
                </value>
                <value>
                    <fullName>JFA - Tailor</fullName>
                </value>
                <value>
                    <fullName>Job Analysis</fullName>
                </value>
                <value>
                    <fullName>Judgement</fullName>
                </value>
                <value>
                    <fullName>Live Product</fullName>
                </value>
                <value>
                    <fullName>Localization</fullName>
                </value>
                <value>
                    <fullName>Motivation</fullName>
                </value>
                <value>
                    <fullName>Multimedia</fullName>
                </value>
                <value>
                    <fullName>Personality</fullName>
                </value>
                <value>
                    <fullName>Personality / Behavioural</fullName>
                </value>
                <value>
                    <fullName>Platform Onboarding</fullName>
                </value>
                <value>
                    <fullName>Precise Fit Solutions</fullName>
                </value>
                <value>
                    <fullName>Product capability</fullName>
                </value>
                <value>
                    <fullName>Product Review</fullName>
                </value>
                <value>
                    <fullName>ROI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Number__c</fullName>
        <displayFormat>PROD - {0000}</displayFormat>
        <label>Product Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>RAG_Indicator__c</fullName>
        <formula>IF(ISPICKVAL(RAG_Option__c, &apos;High&apos;) ,  IMAGE(&quot;/resource/1674447737000/RAG_Indicator_Red?&quot; , &quot;Red&quot; , 25, 26) ,
				IF( ISPICKVAL(RAG_Option__c, &apos;Light&apos;) ,  IMAGE(&quot;/resource/1674447737000/RAG_Indicator_Green?&quot; , &quot;Green&quot; , 25 ,26) , 
						IF(ISPICKVAL(RAG_Option__c, &apos;Medium&apos;) , IMAGE(&quot;/resource/1674447737000/RAG_Indicator_Amber?&quot; , &quot;Amber&quot; , 25,26), &quot;&quot;)))</formula>
        <label>RAG Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RAG_Option__c</fullName>
        <inlineHelpText>This is used to describe the complexity of PS products</inlineHelpText>
        <label>RAG Option</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>0</fullName>
                    <isActive>false</isActive>
                    <label>0</label>
                </value>
                <value>
                    <fullName>1</fullName>
                    <isActive>false</isActive>
                    <label>1</label>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Light</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Renewable__c</fullName>
        <inlineHelpText>This is a renewable product</inlineHelpText>
        <label>Renewable</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Revenue_Category__c</fullName>
        <label>Stream</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Professional Services</fullName>
                </value>
                <value>
                    <fullName>Managed Services</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Product subscription</fullName>
                </value>
                <value>
                    <fullName>Product in advance</fullName>
                </value>
                <value>
                    <fullName>Product in arrears</fullName>
                </value>
                <value>
                    <fullName>Professional Services (Public Training)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Beta</fullName>
                </value>
                <value>
                    <fullName>Revenue Ready</fullName>
                    <default>true</default>
                    <label>Revenue Ready</label>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
                <value>
                    <fullName>End of Life</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>